# wang_agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md
agent-python/: Dockerfile  pyproject.toml  requirements.txt
agent-python/app/: config.py  main.py
agent-python/app/agents/multi_agent/: coordinator.py
agent-python/app/api/: chat.py  workflow_api.py
agent-python/app/core/agent_engine/: engine.py
agent-python/app/core/context/: builder.py
agent-python/app/core/executor/: tool_executor.py
agent-python/app/core/router/: intent_router.py  skill_router.py
agent-python/app/core/workflow/: client.py  (+5 more)
agent-python/app/llm/: __init__.py  litellm_client.py  model_router.py  model_wrapper.py  task_classifier.py
agent-python/app/memory/: long_term.py  memory_injector.py  short_term.py  vector_memory.py
agent-python/app/rag/: __init__.py  caller.py  embedding.py  index_store.py  kb_manager.py  permission_rag.py  reranker.py  retriever.py
agent-python/app/skills/: skill_loader.py
agent-python/app/trace/: tracer.py
agent-python/tests/: test_context_builder.py  test_executor.py  test_index_store.py  test_ingestion_chunkers.py  test_ingestion_loaders.py  test_ingestion_pipeline.py  test_intent_router.py  test_kb_manager.py  test_litellm_client.py  test_long_memory.py  test_main.py  test_memory.py  test_model_router.py  test_model_wrapper.py  test_multi_agent.py  test_rag.py  test_security.py  test_skill.py  test_task_classifier.py  test_tracer.py  test_workflow_activities.py  test_workflow_api.py  test_workflow_client.py
(+318 files in other folders)
