[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-agent"
version = "1.0.0"
description = "Enterprise AI Platform — AgentScope Runtime with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.0.0",
    "litellm>=1.40.0",
    "llama-index>=0.10.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
